# llm-replay

./: .gitignore  README.md  pyproject.toml
docs/: adr-001-request-replay.md  bug-003-rehydrated-attachments.md  cassette-format-notes.md  hookspec-naming-and-scope.md  llm-architecture-notes.md  show-and-tell-post.md  upstream-proposal.md
llm_replay/: __init__.py  build.py  config.py  request.py  storage.py  store.py
tests/: conftest.py  test_async.py  test_build_helpers.py  test_build_request.py  test_chain_hash.py  test_cli.py  test_cross_process_replay.py  test_integration.py  test_plugin_registration.py  test_prompt_coverage.py  test_request.py  test_storage.py  test_store.py
